tests/invalid/undef_symbol.err_exp
undef_symbol.m:018: In clause for predicate `main'/2:
undef_symbol.m:018:   error: call to [38;5;203mundefined[39;49m predicate [38;5;87m`undef_symbol.r'/2.[39;49m
undef_symbol.m:018:   [38;5;226m(Did you mean `p' or `q'?)[39;49m
undef_symbol.m:023: In clause for predicate `p'/2:
undef_symbol.m:023:   error: call to [38;5;203mundefined[39;49m predicate [38;5;87m`string.append'/3.[39;49m
undef_symbol.m:023:   [38;5;226m(The module `string' has not been imported.)[39;49m
undef_symbol.m:029: In clause for predicate `q'/2:
undef_symbol.m:029:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`term.context'/2.[39;49m
undef_symbol.m:029:   [38;5;226m(The module `term' has not been imported.)[39;49m
